@@ -6,7 +6,7 @@
 ### Maximum Likelihood inference for the two-component spatio-temporal intensity
 ### model described in Meyer et al (2012), DOI: 10.1111/j.1541-0420.2011.01684.x
 ###
-### Copyright (C) 2012 Sebastian Meyer
+### Copyright (C) 2009-2013 Sebastian Meyer
 ### $Revision$
 ### $Date$
 ################################################################################
@@ -16,7 +16,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
     data, subset, t0 = data$stgrid$start[1], T = tail(data$stgrid$stop,1),
     na.action = na.fail, partial = FALSE,
     control.siaf = list(F=list(), Deriv=list()), optim.args, finetune = FALSE,
-    model = FALSE, cumCIF = TRUE, cumCIF.pb = TRUE)
+    model = FALSE, cumCIF = TRUE, cumCIF.pb = TRUE, verbose = TRUE)
 {
 
     ####################
@@ -48,7 +48,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         nlmRes, nmRes, optim.args, optimArgs, control.siaf,
         optimMethod, optimRes, optimRes1, optimValid, partial,
         partialloglik, ptm, qmatrix, res, negsc, score, subset, tmpexpr,
-        typeSpecificEndemicIntercept, useScore, whichfixed, 
+        typeSpecificEndemicIntercept, useScore, verbose, whichfixed, 
         inherits = FALSE)))
 
 
@@ -177,7 +177,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
     eventTypes <- factor(mfe[["(type)"]])   # drop unused levels
     typeNames <- levels(eventTypes)
     nTypes <- length(typeNames)
-    if (nTypes > 1L) cat("marked point pattern of", nTypes, "types\n")
+    if (verbose && nTypes > 1L) cat("marked point pattern of", nTypes, "types\n")
     qmatrix <- checkQ(qmatrix, typeNames)
     # we only need the integer codes for the calculations
     eventTypes <- as.integer(eventTypes)
@@ -211,7 +211,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         })
         # calculate sum_{k=1}^K q_{kappa_j,k} for all j = 1:N
         qSum <- unname(rowSums(qmatrix)[eventTypes])   # N-vector
-    } else message("no epidemic component in model")
+    } else if (verbose) message("no epidemic component in model")
 
 
 
@@ -293,7 +293,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         offsetGrid <- model.offset(mfhGrid)
         dt <- mfhGrid[["(dt)"]]
         ds <- mfhGrid[["(ds)"]]
-    } else message("no endemic component in model")
+    } else if (verbose) message("no endemic component in model")
 
 
     ### Check that there is at least one parameter
@@ -342,7 +342,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
             ## => speed-up optimization since 'nlminb' evaluates the loglik and
             ## score for the same set of parameters at the end of each iteration
         } else {
-            cat("Continuing without memoisation of 'siaf$f' cubature ...\n")
+            if (verbose) cat("Continuing without memoisation of 'siaf$f' cubature ...\n")
             ## However, trivial caching is used manually in case of fixed
             ## "siafpars" and in LambdagEvents()
             .siafInt
@@ -396,8 +396,9 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
     npars <- nbeta0 + p + q + nsiafpars + ntiafpars
 
     # REMINDER:
-    #  theta - parameter vector c(beta, gamma, siafpars, tiafpars), where
-    #    beta    - parameters of the endemic component exp(offset + eta_h(t,s))
+    #  theta - parameter vector c(beta0, beta, gamma, siafpars, tiafpars), where
+    #    beta0   - endemic intercept (maybe type-specific)
+    #    beta    - other parameters of the endemic component exp(offset + eta_h(t,s))
     #    gamma   - parameters of the epidemic term exp(eta_e(t,s))
     #    siafpars- parameters of the epidemic spatial interaction function
     #    tiafpars- parameters of the epidemic temporal interaction function
@@ -841,7 +842,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
                             siaf = siaf, tiaf = tiaf)
         setting$call <- cl
         # Return settings
-        message("optimization skipped (returning functions in data environment)")
+        if (verbose) message("optimization skipped (returning functions in data environment)")
         return(setting)
     }
 
@@ -917,10 +918,12 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         ## modify negll, negsc and neghess for subvector optimization
         initpars <- optim.args$par
         optim.args$par <- initpars[!fixed]
-        if (all(fixed)) {
-            cat("\nno numerical likelihood optimization, all parameters fixed:\n")
-        } else cat("\nfixed parameters during optimization:\n")
-        print(initpars[fixed])
+        if (verbose) {
+            if (all(fixed)) {
+                cat("\nno numerical likelihood optimization, all parameters fixed:\n")
+            } else cat("\nfixed parameters during optimization:\n")
+            print(initpars[fixed])
+        }
         tmpexpr <- expression(
             initpars[!fixed] <- theta,
             theta <- initpars
@@ -939,7 +942,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
 
         ## if siafpars or tiafpars are fixed, pre-evaluate integrals    
         if (fixedsiafpars) {
-            cat("pre-evaluating 'siaf' integrals with fixed parameters ...\n")
+            if (verbose) cat("pre-evaluating 'siaf' integrals with fixed parameters ...\n")
             .siafInt.args[[1]] <- initpars[paste("e.siaf", 1:nsiafpars, sep=".")]
             siafInt <- do.call(".siafInt", .siafInt.args)
             ## re-define .siafInt such that it just returns the pre-evaluated integrals
@@ -952,7 +955,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
             }, add=TRUE)
         }
         if (fixedtiafpars) {
-            cat("pre-evaluating 'tiaf' integrals with fixed parameters ...\n")
+            if (verbose) cat("pre-evaluating 'tiaf' integrals with fixed parameters ...\n")
             tiafInt <- .tiafInt(initpars[paste("e.tiaf", 1:ntiafpars, sep=".")])
             ## re-define .tiafInt such that it just returns the pre-evaluated
             ## integrals if called with the default arguments
@@ -1000,13 +1003,15 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
 
         ## Call 'optim', 'nlminb', or 'nlm' with the above arguments
 
-        cat("\nminimizing the negative", if (partial) "partial", "log-likelihood",
-            "using", if (optimMethod %in% c("nlm", "nlminb"))
-            paste0("'",optimMethod,"()'") else {
-                paste0("'optim()'s \"", optimMethod, "\"")
-            }, "...\n")
-        cat("initial parameters:\n")
-        print(optimArgs$par)
+        if (verbose) {
+            cat("\nminimizing the negative", if (partial) "partial", "log-likelihood",
+                "using", if (optimMethod %in% c("nlm", "nlminb"))
+                paste0("'",optimMethod,"()'") else {
+                    paste0("'optim()'s \"", optimMethod, "\"")
+                }, "...\n")
+            cat("initial parameters:\n")
+            print(optimArgs$par)
+        }
         optimRes1 <- if (optimMethod == "nlminb") {
             nlminbControl <- control2nlminb(optimArgs$control,
                                             defaults = list(trace=5L, rel.tol=1e-6))
@@ -1070,10 +1075,12 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         ## Optional fine-tuning of ML estimates by robust Nelder-Mead
 
         optimRes <- if (finetune) {
-            cat("\nMLE from first optimization:\n")
-            print(optimRes1$par)
-            cat("loglik(MLE) =", optimRes1$value, "\n")
-            cat("\nfine-tuning MLE using Nelder-Mead optimization...\n")
+            if (verbose) {
+                cat("\nMLE from first optimization:\n")
+                print(optimRes1$par)
+                cat("loglik(MLE) =", optimRes1$value, "\n")
+                cat("\nfine-tuning MLE using Nelder-Mead optimization...\n")
+            }
             optimArgs$par <- optimRes1$par
             optimArgs$method <- "Nelder-Mead"
             optimArgs$hessian <- doHessian
@@ -1085,18 +1092,24 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         } else optimRes1
 
         if (optimRes$convergence != 0) {
-            cat("\nWARNING: OPTIMIZATION ROUTINE DID NOT CONVERGE",
-                if (finetune || optimMethod != "nlminb")
-                paste0("(code ", optimRes$convergence, ")"),
-                "!\n")
-            if (!is.null(optimRes$message) && nzchar(optimRes$message)) {
-                cat("MESSAGE: \"", optimRes$message, "\"\n", sep="")
+            msgNotConverged <- paste("optimization routine did not converge",
+                if (finetune || optimMethod != "nlminb") {
+                    paste0("(code ", optimRes$convergence, ")")
+                } else paste0("(", optimRes$message, ")"))
+            warning(msgNotConverged)
+            if (verbose) {
+                cat("\nWARNING: ", msgNotConverged, "!\n", sep="")
+                if (!is.null(optimRes$message) && nzchar(optimRes$message)) {
+                    cat("MESSAGE: \"", optimRes$message, "\"\n", sep="")
+                }
             }
         }
 
-        cat("\n", if (finetune) "final ", "MLE:\n", sep = "")
-        print(optimRes$par)
-        cat("loglik(MLE) =", optimRes$value, "\n")
+        if (verbose) {
+            cat("\n", if (finetune) "final ", "MLE:\n", sep = "")
+            print(optimRes$par)
+            cat("loglik(MLE) =", optimRes$value, "\n")
+        }
 
     }
 
@@ -1195,7 +1208,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
         LambdagEvents
     }
     if (cumCIF) {
-        cat("\nCalculating the fitted cumulative intensities at events...\n")
+        if (verbose) cat("\nCalculating the fitted cumulative intensities at events...\n")
         fit$tau <- LambdagEvents(cumCIF.pb)
     }
 
@@ -1239,7 +1252,7 @@ twinstim <- function (endemic, epidemic, siaf, tiaf, qmatrix = data$qmatrix,
 
     ### Return object of class "twinstim"
 
-    cat("\nDone.\n")
+    if (verbose) cat("\nDone.\n")
     fit$call <- cl
     fit$runtime <- proc.time()[[3]] - ptm
     class(fit) <- "twinstim"
